Add text-break style to reservation view table

--- a/zapisy/apps/schedule/templates/schedule/includes/reservation_view.html
+++ b/zapisy/apps/schedule/templates/schedule/includes/reservation_view.html
@@ -1,4 +1,4 @@
-<table class="table border">
+<table class="table border text-break">
     <tbody>
         <tr>
             <th class="text-light bg-info">Tytuł</th>
