--- a/zapisy/apps/enrollment/courses/templates/courses/course_parts/course_head.html
+++ b/zapisy/apps/enrollment/courses/templates/courses/course_parts/course_head.html
@@ -17,7 +17,7 @@
 
 <table class="table table-bordered table-md-responsive" id="table-info">
     <colgroup>
-        <col class="table-info-type"></col>
+        <col class="table-info-type" style="width: 30%"></col>
     </colgroup>
     <tbody>
         <tr>
