--- a/zapisy/apps/enrollment/courses/templates/courses/course_parts/course_head.html
+++ b/zapisy/apps/enrollment/courses/templates/courses/course_parts/course_head.html
@@ -15,9 +15,20 @@
     </div>
 </div>
 
+<style>
+    #table-info td {
+        width: 100%; 
+        word-wrap: break-word; 
+    }
+
+    #table-info th {
+        white-space: nowrap;
+    }
+</style>
+
 <table class="table table-bordered table-md-responsive" id="table-info">
     <colgroup>
-        <col class="table-info-type" style="width: 30%"></col>
+        <col class="table-info-type"></col>
     </colgroup>
     <tbody>
         <tr>
