--- a/zapisy/apps/enrollment/courses/templates/courses/course_parts/course_head.html
+++ b/zapisy/apps/enrollment/courses/templates/courses/course_parts/course_head.html
@@ -16,13 +16,8 @@
 </div>
 
 <style>
-    #table-info td {
-        width: 100%; 
-        word-wrap: break-word; 
-    }
-
     #table-info th {
-        white-space: nowrap;
+        min-width: max-content; 
     }
 </style>
 
