Remove spaces around slashes in group.html

--- a/zapisy/apps/enrollment/courses/templates/courses/group.html
+++ b/zapisy/apps/enrollment/courses/templates/courses/group.html
@@ -56,20 +56,12 @@
 
     <div class="table-responsive-sm">
         <h3>Lista osób zapisanych na przedmiot:</h3>
-
         <p>
             Liczba zapisanych osób:
-            {{students_in_group|length}} / {{group.total_limit}}{% if group.num_enrolled_by_role %}, w tym:
-                {{ group.num_enrolled }}
-                    /
-                    {{group.limit}}
+            {{students_in_group|length}}/{{group.total_limit}}{% if group.num_enrolled_by_role %}, w tym:
+                {{ group.num_enrolled }}/{{group.limit}}
                     niegwarantowanych{% for gs, taken_spots in spots_by_role %}{% if taken_spots != 0 %},
-                            <span title = "Liczba zapisanych osób dla grupy {{gs.role.name}}.">
-                                {{ taken_spots }}
-                            </span>
-                             /
-                             <span title="Miejsca gwarantowane dla grupy {{gs.role.name}}.">
-                                {{ gs.limit }}
+                            <span title = "Liczba zapisanych osób dla grupy {{gs.role.name}}.">{{ taken_spots }}</span>/<span title="Miejsca gwarantowane dla grupy {{gs.role.name}}.">{{ gs.limit }}
                                  <span class="badge bg-dark"> {{ gs.role.name }} </span>
                              </span>
                         {% endif %}
