Tworzenie tytułu przeniesione do metody clean

--- a/zapisy/apps/schedule/templates/schedule/event.html
+++ b/zapisy/apps/schedule/templates/schedule/event.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <h2>
-        {{ event.get_display_title }}
+        {{ event.title }}
     </h2>
     <table class="table border">
         <tbody>
