--- a/zapisy/apps/schedule/templates/schedule/includes/reservation_view.html
+++ b/zapisy/apps/schedule/templates/schedule/includes/reservation_view.html
@@ -4,7 +4,7 @@
             <th class="text-light bg-info">Tytuł</th>
             <td colspan="3">
                 <a href="{% url 'events:show' event.id %}">
-                    {{ event.get_display_title }}
+                    {{ event.title }}
                 </a>
             </td>
         </tr>
