Add hours to title if more than 1 group

--- a/zapisy/apps/grade/poll/templates/poll/results.html
+++ b/zapisy/apps/grade/poll/templates/poll/results.html
@@ -24,7 +24,7 @@
     {% endif %}
     {% if current_poll %}
     <div class="mb-3">
-      <h3>Podsumowanie: <span class="text-info">{{ current_poll.name }}</span></h3>
+      <h3>Podsumowanie: <span class="text-info">{{ current_poll.name }}{% if polls|lookup:current_poll.type|lookup:current_poll.name|length > 1 %} ({{ current_poll.hours }}){% endif %}</span></h3>
       <h5>Kategoria: <span class="text-secondary">{{ current_poll.type }}</span></h5>
     </div>
     {% endif %}
