Naprawienie metody taken_spots_by_role

--- a/zapisy/apps/enrollment/courses/templates/courses/group.html
+++ b/zapisy/apps/enrollment/courses/templates/courses/group.html
@@ -59,8 +59,9 @@
         <p>
             Liczba zapisanych osób:
             {{students_in_group|length}}/{{group.total_limit}}{% if group.num_enrolled_by_role %}, w tym:
+                {% if group.num_enrolled != 0 or group.limit != 0 %}
                 {{ group.num_enrolled }}/{{group.limit}}
-                    niegwarantowanych{% for gs, taken_spots in spots_by_role %}{% if taken_spots != 0 %},
+                    niegwarantowanych{% endif %}{% for gs, taken_spots in spots_by_role %}{% if taken_spots != 0 %},
                             <span title = "Liczba zapisanych osób dla grupy {{gs.role.name}}.">{{ taken_spots }}</span>/<span title="Miejsca gwarantowane dla grupy {{gs.role.name}}.">{{ gs.limit }}
                                  <span class="badge bg-dark"> {{ gs.role.name }} </span>
                              </span>
