Naprawienie implementacji metody taken_spots_by_role oraz wyświetlania liczby zapisanych studentów do grupy

--- a/zapisy/apps/enrollment/courses/templates/courses/course_parts/groups_section.html
+++ b/zapisy/apps/enrollment/courses/templates/courses/course_parts/groups_section.html
@@ -67,7 +67,7 @@
                     </td>
                     <td>
                         {{ group.total_enrolled }}
-                        {% if group.num_enrolled_by_role %}
+                        {% if group.role_enrolled != 0 %}
                             ({{ group.num_enrolled }}
                             {% for role, number in group.num_enrolled_by_role.items %}{% if number != 0 %}
                                 +
