--- a/zapisy/apps/schedule/templates/schedule/classrooms.html
+++ b/zapisy/apps/schedule/templates/schedule/classrooms.html
@@ -17,7 +17,7 @@
 {% endblock %}
 {% endblock %}
 
-{% block sidebar %}
+{% block sidebar-inner %}
 {% regroup rooms by get_floor_display as floor_list %}
 <nav id="navbar-rooms" class="navbar navbar-light">
     <nav class="nav nav-pills flex-column">
