--- a/zapisy/apps/schedule/templates/schedule/reservations.html
+++ b/zapisy/apps/schedule/templates/schedule/reservations.html
@@ -36,7 +36,7 @@
     </div>
 {% endblock %}
 
-{% block sidebar %}
+{% block sidebar-inner %}
     <form>
         <legend>Filtr</legend>
         {{ events.form|crispy }}
