Dodaj zawijanie tekstu na malych ekranach

--- a/zapisy/apps/common/assets/main/index.scss
+++ b/zapisy/apps/common/assets/main/index.scss
@@ -253,6 +253,11 @@ colgroup col.table-info-type {
   white-space: nowrap;
 }
 
+@media (max-width: 992px){
+  #table-info th {
+    white-space: normal;
+  }  
+}
 
 // Required field marker in forms.
 .asteriskField {
