zmiana breakpointa na stałą, dodanie stylowania dla odpowiedniej klasy

--- a/zapisy/apps/enrollment/courses/templates/courses/course_parts/course_head.html
+++ b/zapisy/apps/enrollment/courses/templates/courses/course_parts/course_head.html
@@ -15,9 +15,9 @@
     </div>
 </div>
 
-<table class="table table-bordered table-md-responsive" id="table-info">
+<table class="table table-bordered table-md-responsive table-offer" id="table-info">
     <colgroup>
-        <col class="table-info-type"></col>
+        <col class="table-info-type table-info-offer"></col>
     </colgroup>
     <tbody>
         <tr>
