--- a/zapisy/apps/offer/proposal/templates/proposal/proposal_info.html
+++ b/zapisy/apps/offer/proposal/templates/proposal/proposal_info.html
@@ -1,8 +1,8 @@
 {% load filters %}
 
-<table class="table table-bordered table-md-responsive d-print-none" id="table-info">
+<table class="table table-bordered table-md-responsive d-print-none table-offer" id="table-info">
     <colgroup>
-        <col class="table-info-type"></col>
+        <col class="table-info-type table-what table-info-offer"></col>
     </colgroup>
     <tbody>
         <tr>
