--- a/zapisy/apps/enrollment/courses/templates/courses/course_parts/groups_section.html
+++ b/zapisy/apps/enrollment/courses/templates/courses/course_parts/groups_section.html
@@ -27,7 +27,7 @@
                     {# Link to the group page #}
                     <th></th>
                 {% endif %}
-                <th scope="col">Add to sched</th>
+                <th title="Dodaj/usuń grupę do/z prototypu planu zajęć" scope="col">Add to sched</th>
             </tr>
         </thead>
         <tbody>
@@ -124,17 +124,31 @@
                         <td>
                             <a href="{% url 'group-view' group.pk %}">lista</a>
                         </td>
+                        
+                        <td class="schedule">
+                            {% if group.is_pinned %}
+                            <form action="{% url 'unpin' %}" method="post" class="removeFromSchedule">{% csrf_token %}
+                                <div>
+                                    <input type="hidden" name="group_id" value="{{ group.pk }}"/>
+                                    <button type="submit" class="btn btn-danger btn-sm removeFromScheduleButton"
+                                    onclick="return confirm('Czy na pewno chcesz usunąć tą grupę z prototypu planu zajęć?');">
+                                        Usuń z prototypu
+                                    </button>
+                                </div>
+                            </form>
+                            {% else %}
+                            <form action="{% url 'pin' %}" method="post" class="addToSchedule">{% csrf_token %}
+                                <div>
+                                    <input type="hidden" name="group_id" value="{{ group.pk }}"/>
+                                    <button type="submit" class="btn btn-primary btn-sm addToScheduleButton"
+                                    onclick="return confirm('Czy na pewno chcesz dodać tą grupę do prototypu planu zajęć?');">
+                                        Dodaj do prototypu
+                                    </button>
+                                </div>
+                            </form>
+                            {% endif %}
+                        </td>
                     {% endif %}
-                    <td class="schedule">
-                        <form action="" method="post" class="addToSchedule">    
-                            <div>
-                                <button type="submit" class="btn btn-primary btn-sm addToScheduleButton"
-                                onclick="return confirm('Czy na pewno chcesz dodać tą grupę do prototypu planu zajęć?');">
-                                    Dodaj do prototypu
-                                </button>
-                            </div>
-                        </form>    
-                    </td>
                 </tr>
             {% endfor %}
             </tbody>
