--- a/zapisy/apps/offer/proposal/templates/proposal/proposal_info.html
+++ b/zapisy/apps/offer/proposal/templates/proposal/proposal_info.html
@@ -2,7 +2,7 @@
 
 <table class="table table-bordered table-md-responsive d-print-none table-offer" id="table-info">
     <colgroup>
-        <col class="table-info-type table-what table-info-offer"></col>
+        <col class="table-info-type table-info-offer"></col>
     </colgroup>
     <tbody>
         <tr>
