Usuwamy niepotrzebne własności, zamieniamy display na float

--- a/zapisy/apps/enrollment/courses/templates/courses/course_parts/course_head.html
+++ b/zapisy/apps/enrollment/courses/templates/courses/course_parts/course_head.html
@@ -23,11 +23,8 @@
             margin: 0;
         }
 
-        #hours ul {
-            display: flex;
-            padding: 0;
-            margin: 0;
-            list-style-type: none;
+        #hours ul li {
+            float: left;
         }
             
         #hours ul li + li::before {
