--- a/zapisy/apps/users/templates/users/my_profile.html
+++ b/zapisy/apps/users/templates/users/my_profile.html
@@ -63,8 +63,10 @@
         </table>
 
         <a class="btn btn-light" href="{% url 'password_change' %}" role="button">Zmień hasło</a>
-        {% if user.employee %}
+        {% if user.employee or is_external_contractor %}
             <a class="btn btn-light" href="{% url 'email-change' %}" role="button">Zmień adres email</a>
+        {% endif %}
+        {% if user.employee %}
             <a class="btn btn-light" href="{% url 'employee-data-change' %}" role="button">Zmień inne dane</a>
         {% endif %}
     </div>
