--- a/zapisy/apps/schedule/templates/schedule/reservations.html
+++ b/zapisy/apps/schedule/templates/schedule/reservations.html
@@ -1,7 +1,6 @@
 {% extends "schedule/base.html" %}
-{% comment %} {% load bootstrap_pagination %} {% endcomment %}
 {% load crispy_forms_tags %}
-
+{% load django_bootstrap5 %}
 {% block schedule_manage %} class="active"{% endblock %}
 
 {% block styles %}
@@ -32,7 +31,7 @@
     {% endfor %}
 
     <div class="d-flex justify-content-center">
-        {% comment %} {% bootstrap_paginate qs range=10 show_first_last="true" %} {% endcomment %}
+        {% bootstrap_pagination qs %}
     </div>
 {% endblock %}
 
