--- a/zapisy/apps/theses/templates/theses/thesis_form.html
+++ b/zapisy/apps/theses/templates/theses/thesis_form.html
@@ -45,9 +45,8 @@
     <form method="POST" id="confirm-submit" class="post-form">
         {% csrf_token %}
         {% crispy thesis_form %}
-        <div id="student-filter"></div>
         <input type="hidden" id="ajax-url" value='{% url "theses:students" %}' />
-        {% render_bundle 'theses-student-filter' %} 
+        {% render_bundle 'theses-student-search' %} 
     </form>
     {% if confirm_changes %}
         {{ old_instance|json_script:"old_instance" }}
