fix: footer always sticks to the bottom

--- a/zapisy/templates/base.html
+++ b/zapisy/templates/base.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body{% if debug %} class="debug"{% endif %}>
+<body class="d-flex flex-column min-vh-100{% if debug %} debug{% endif %}">
     <div class="container-fluid p-0 d-print-none">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container m-0 mw-100">
