1766 Wprowadzenie stałego filtra na przedmioty
Aby osiągnąć ten cel i w widokach przedmiotów (m.in. zakładki Przedmioty, Prototyp planu ale również Oferta)
były zapamiętywane ostatnio użyte filtry dokonałem następujących zmian:

1. Informacje o wybranych filtrach usunąłem z URL.searchParams i przeniosłem do sessionStorage z kluczem "last_searched_params".
Dzięki temu przy przechodzeniu między podstronami nie musimy pamiętać o doklejaniu końcówki poprzedniego URL-a do nowego
tylko możemy zostawić puste searchParams a ostatnio użyty filtr wygodnie wyciągnać z sessionStorage.
Ciastko to jest tworzone i aktualizowane, gdy użytkownik wybierze niepuste filtry, a usuwane, gdy użytkownik wyczyści filtry.
Jeśli nie ma ciastka (nie wybraliśmy jeszcze żadnych filtrów lub je wyczyściliśmy) to używane są domyślne filtry.
Takie rozwiązanie sprawia, że nawet niezalogowany użytkownik ma na czas danej sesji włączony ten feature.
Ciastka te są usuwane po zakończeniu sesji, więc informacje o filtrze niezalogowanych użytkowników nie są zapamiętywane między sesjami.

2. Na początku, przy pierwszym ładowaniu strony, jeśli użytkownik był od razu zalogowany ciastko to będzie uzupełnianie informacją z bazy danych.
Jeśli użytkownik nie był zalogowany to początkowo używamy domyślnych filtrów.

3. Jeśli użytkownik zaloguje się później to wszelkie preferencje, które nie miały stworzonego klucza w sesji (co oznacza że miały wartość domyślną)
zostają nadpisane przez preferencje z bazy danych. Jeśli użytkownik zmienił filtry przed zalogowaniem się to zostaną one zachowane po zalogowaniu kosztem
tych użytych w poprzedniej sesji.

4. Przy wylogowaniu się użytkownika jego preferencje są zapisywane do bazy danych o ile użytkownik jest studentem/wykładowcą (czyli nie działa dla kont typu "asm").

5. Przy wyłączaniu strony preferencje z sessionStorage są zapisywane do bazy danych o ile użytkownik jest zalogowanym studentem/wykładowcą.

Rozwiązania z bazą danych opisane w punktach 2, 3, 4 i 5 jeszcze nie

--- a/zapisy/templates/base.html
+++ b/zapisy/templates/base.html
@@ -24,6 +24,15 @@
 
         gtag('js', new Date());
         gtag('config', 'UA-109984921-1');
+
+        // when user closes website we save his preferences
+        // from sessionStorage to database if he was logged
+        window.addEventListener("beforeunload", function(event) {
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", "close/", false);
+            xhr.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+            xhr.send(JSON.stringify({}));
+        });
     </script>
 
     {% render_bundle "common-main" %}
